# smart_struct_wrapper

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.md  Makefile  README.md  legacy.c  legacy.h  run_coverage  smart_wrapper.cpp  smart_wrapper.hpp
catch2/: catch.hpp
tools/: run_coverage
